--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.3",
     "next": "14.2.5",
+    "next-i18next": "^15.3.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@types/node": "^20",
