--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.3",
+    "clsx": "^2.1.1",
     "next": "14.2.5",
     "next-i18next": "^15.3.1",
     "react": "^18",
