--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "axolotl-store",
+  "name": "pet-store",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@tailwindcss/forms": "^0.5.7",
-    "axios": "^1.7.3",
-    "clsx": "^2.1.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "next": "14.2.5",
-    "next-i18next": "^15.3.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-router-dom": "^6.26.0"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
